// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: .NET 1`] = `
<DotNet
  host="HOST"
  projectKey="my-project"
  token="myToken"
/>
`;

exports[`renders correctly: gradle 1`] = `
<JavaGradle
  host="HOST"
  projectKey="my-project"
  token="myToken"
/>
`;

exports[`renders correctly: maven 1`] = `
<JavaMaven
  host="HOST"
  projectKey="my-project"
  token="myToken"
/>
`;

exports[`renders correctly: other 1`] = `
<Other
  host="HOST"
  os="win"
  projectKey="my-project"
  token="myToken"
/>
`;
